[gd_scene load_steps=3 format=3 uid="uid://bstjhhorb51j"]

[ext_resource type="Script" path="res://scenes/ui/menus/main_menu.gd" id="1_tqulc"]
[ext_resource type="Theme" uid="uid://bmfa5joyltbk6" path="res://scenes/ui/themes/default_theme.tres" id="2_v7833"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_v7833")
script = ExtResource("1_tqulc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.294118, 0.360784, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.101961, 0.109804, 1)
theme_override_font_sizes/font_size = 24
text = "BEGIJNENDIJK'S
EXTERMINATION"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.121569, 0.00784314, 1)
text = "SAM RETURNS"
horizontal_alignment = 1

[node name="PlayerName" type="TextEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 28)
layout_mode = 2
size_flags_vertical = 3
text = "Warrior"
placeholder_text = "Player name"

[node name="IP" type="TextEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 28)
layout_mode = 2
size_flags_vertical = 3
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="Port" type="TextEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 28)
layout_mode = 2
text = "6969"
placeholder_text = "6969"

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinBtn" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join Game"

[node name="HostBtn" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Host Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -16.0
offset_right = 208.0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "Made by Hatch Game Studio"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/HostBtn" to="." method="_on_host_btn_pressed"]
